Add VS Code TOML extension

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -66,5 +66,6 @@
     // Validation for Kubernetes manifests
     "yaml.schemas": {
         "kubernetes": "manifests/*"
-    }
+    },
+    "[python]": {}
 }
