--- a/iterm/com.googlecode.iterm2.plist
+++ b/iterm/com.googlecode.iterm2.plist
@@ -54,7 +54,7 @@
 	<key>NSTableView Supports v2 KeyBingingTable</key>
 	<true/>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>160 152 796 486 0 0 1440 877 </string>
+	<string>438 281 796 486 0 0 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>720 0 717 877 0 0 1440 877 </string>
 	<key>New Bookmarks</key>
@@ -1086,9 +1086,9 @@
 				<key>0xf702-0x260000</key>
 				<dict>
 					<key>Action</key>
-					<integer>10</integer>
+					<integer>47</integer>
 					<key>Text</key>
-					<string>[1;6D</string>
+					<string>1</string>
 				</dict>
 				<key>0xf702-0x280000</key>
 				<dict>
@@ -1096,6 +1096,13 @@
 					<integer>10</integer>
 					<key>Text</key>
 					<string>b</string>
+				</dict>
+				<key>0xf702-0x2a0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>47</integer>
+					<key>Text</key>
+					<string>1</string>
 				</dict>
 				<key>0xf703-0x220000</key>
 				<dict>
@@ -1114,9 +1121,9 @@
 				<key>0xf703-0x260000</key>
 				<dict>
 					<key>Action</key>
-					<integer>10</integer>
+					<integer>48</integer>
 					<key>Text</key>
-					<string>[1;6C</string>
+					<string>1</string>
 				</dict>
 				<key>0xf703-0x280000</key>
 				<dict>
@@ -1124,6 +1131,13 @@
 					<integer>10</integer>
 					<key>Text</key>
 					<string>f</string>
+				</dict>
+				<key>0xf703-0x2a0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>46</integer>
+					<key>Text</key>
+					<string>1</string>
 				</dict>
 				<key>0xf704-0x20000</key>
 				<dict>
@@ -1333,6 +1347,8 @@
 	<true/>
 	<key>NoSyncInstallationId</key>
 	<string>45486B0B-C96C-460E-A3B3-E596F0205029</string>
+	<key>NoSyncPermissionToShowTip</key>
+	<false/>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>582074723.31547999</real>
 	<key>PointerActions</key>
@@ -1379,7 +1395,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-06-12T23:28:17Z</date>
+	<date>2019-06-19T13:49:42Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
