[vscode] Don't use Language Server for Go

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -67,6 +67,5 @@
     "yaml.schemas": {
         "kubernetes": "manifests/*"
     },
-    "[python]": {},
-    "go.useLanguageServer": true
+    "[python]": {}
 }
