[vscode] Enable Go language server and disable prettier from formatting YAML files

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -78,5 +78,10 @@
     },
     "terraform.indexing": {
         "enabled": false
-    }
+    },
+    "go.useLanguageServer": true,
+    "prettier.disableLanguages": [
+        "vue",
+        "yaml"
+    ]
 }
