--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -49,7 +49,7 @@
         "-l"
     ],
     "workbench.iconTheme": null,
-    "window.zoomLevel": 0,
+    "window.zoomLevel": 1,
     // TODO: Update this to nightly once it stabilizes.
     // See https://internals.rust-lang.org/t/nightlies-missing-the-rls-will-no-longer-be-produced/6653/4
     "rust-client.channel": "nightly",
@@ -74,7 +74,6 @@
         "kubernetes": "manifests/*"
     },
     "[python]": {},
-    "prettier.singleQuote": true,
     "bazel.buildifierFixOnFormat": true,
     "terraform.languageServer": {
         "enabled": true
@@ -83,8 +82,7 @@
         "enabled": false
     },
     "go.useLanguageServer": true,
-    "prettier.disableLanguages": [
-        "vue",
-        "yaml"
-    ]
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    }
 }
