[VS Code] Disable golang linter wsl by default

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -5,7 +5,8 @@
     "go.buildFlags": [],
     "go.lintTool": "golangci-lint",
     "go.lintFlags": [
-        "--fast"
+        "--fast",
+        "--disable=wsl"
     ],
     "go.vetFlags": [],
     "go.testFlags": [
