[vscode] Disable SQLTools formatter and install sql-formatter

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -85,5 +85,7 @@
     "go.useLanguageServer": true,
     "[dockerfile]": {
         "editor.defaultFormatter": "ms-azuretools.vscode-docker"
-    }
+    },
+    "sqltools.formatLanguages": [],
+    "sql-formatter.uppercase": true
 }
