Update Open in VS Code workflow

--- a/alfred/Alfred.alfredpreferences/workflows/user.workflow.FB8E01E2-9E6E-4A9A-A280-D4CC3BC51277/info.plist
+++ b/alfred/Alfred.alfredpreferences/workflows/user.workflow.FB8E01E2-9E6E-4A9A-A280-D4CC3BC51277/info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>bundleid</key>
 	<string>iamstevendao.alfred-open-with-vscode</string>
+	<key>category</key>
+	<string>Productivity</string>
 	<key>connections</key>
 	<dict>
 		<key>D97234CC-4D00-4B8D-A115-5919C89B2B02</key>
