--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -18,10 +18,6 @@
   "go.useLanguageServer": true,
   "go.testEnvFile": "",
   // Terraform
-  "terraform.languageServer": {
-    "external": true,
-    "args": ["serve"]
-  },
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform",
     "editor.formatOnSave": true,
@@ -65,6 +61,7 @@
   "editor.fontSize": 12,
   "editor.formatOnSave": true,
   "editor.accessibilitySupport": "off",
+  "editor.bracketPairColorization.enabled": false,
   "files.associations": {
     "*.star": "starlark"
   },
